--- a/src/config/config.json
+++ b/src/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "",
     "password": "",
-    "database": "travel",
+    "database": "excel",
     "host": "localhost:27017",
     "dialect": "mongodb",
     "operatorsAliases": 0
